--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,139 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
+  color: rgba(128, 128, 128, .7);
+  height: 100vh;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+/* ESTILOS GENERALES PARA LOS BOTONES */
+button{
+  cursor: pointer;
+}
+
+/* ESTILOS AL COMPONENTE HEADER */
+.title{
+  text-align: center;
+}
+
+/* ESTILOS AL CONTENEDOR PRINCIPAL */
+.container{
+  max-width: 750px;
+  height: 550px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+/* ESTILOS DEL FORMULARIO */
+.form{
+  background-color: rgba(255, 255, 255, .4);
+  width: 250px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 1rem;
+  border-radius: 10px;
+  position: relative;
+  box-shadow: 6px 11px 13px -2px rgba(0,0,0,0.3);
+}
+
+.form-title{
+  text-align: center;
+}
+
+.form-group{
+  display: flex;
+  margin-bottom: 10px;
+}
+
+.form-input{
+  width: 50%;
+  border: 1px solid gray;
+  text-align: center;
+  border-radius: 10px;
+  outline: none;
+  padding: .5rem;
+}
+
+.form-clear,
+.button-copy{
+  border: none;
+  position: absolute;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  outline: none;
+  color: #fff;
+}
+
+.form-clear{
+  bottom: 20px;
+  right: 30px;
+  background-color: rgba(40, 167, 69, .8);
+}
+
+
+/*  ESITLOS PARA LA FIGURA QUE MOSTRARA EL BORDER RADIUS */
+.border-preview{
+  background-color: rgba(0, 0, 0, .5);
+  padding: 1rem;
+  width: 250px;
+  height: 130px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+}
+
+.border-code{
+  width: 200px;
+  height: 100px;
+  padding: 1rem;
+  font-size: 12px;
+}
+
+/* ESTILOS PARA LOS BOTONES DEL COMPONENTE BORDERCLASSES */
+.container-class{
+  position: relative;
+}
+
+.button-copy{
+  top: 50px;
+  left: 80px;
+  background-color: #8EC5FC;
+}
+
+.copied{
+  position: absolute;
+  left: 75px;
+  top: -90px;
+  background-color: rgba(51, 51, 51, 0.782);
+  border-radius: 5px;
+  padding: 5px;
+}
+
+.fadein{
+  animation: fadein .5s ease;
+}
+
+@keyframes fadein {
+  0% {
+    transform: scale(0)
+  }
+
+  100%{
+    transform: translate3d(2);
+  }
 }
